# firmware

./: .ccls  .clang-format  .gdbinit  .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  README.org  SEGGER_RTT.c  SEGGER_RTT_printf.c  fk-app.d.ts  fk-app.js  fk-app.pb.dart  fk-app.pb.go  fk-app.pb.swift  fk-app.pbenum.dart  fk-app.pbjson.dart  fk-app.proto  fk-app.proto.json  fk-atlas.pb.go  fk-atlas.proto  fk-data.d.ts  fk-data.js  fk-data.pb.dart  fk-data.pb.go  fk-data.pbenum.dart  fk-data.proto  fk-data.proto.json  fk_app_pb2.py  fk_atlas_pb2.py  fk_data_pb2.py  flash-blink  flash-two-blinks  gdb-fw  gdb.py  go.mod  go.sum  jlr  keywords.txt  package-lock.json  (+1 more)
bootloader/: CMakeLists.txt  bl.h  board.c  dependencies.sd  flash.c  flash.h  main.c  qspi.cpp  qspi.h  utilities.cpp  utilities.h
bootloader/arch/: m4.s
bootloader/linking/: common.ld  samd21x18.ld  samd51x20.ld
example/: CMakeLists.txt  example.cpp
fk/: .ccls  CMakeLists.txt  activity.h  base64.cpp  base64.h  battery_gauge.cpp  battery_gauge.h  battery_status.cpp  battery_status.h  board.cpp  board.h  bod33.cpp  circular_buffer.h  clock.cpp  clock.h  collections.h  common.h  compare_banks_worker.cpp  compare_banks_worker.h  config.cpp  config.h  configure_module_worker.cpp  configure_module_worker.h  containers.h  core_dump.cpp  core_dump.h  cpp-std-fill.h  curves.cpp  curves.h  debugging.cpp  debugging.h  deep_sleep.cpp  deep_sleep.h  dependencies.cmake  device_name.cpp  device_name.h  display.cpp  display.h  display_self_check_callbacks.cpp  display_self_check_callbacks.h  (+141 more)
fk/common/: memory.h
fk/data/: adjectives.h  adjectives.txt  animals.h  generate.py
fk/display/: build_view.h  debug_module_view.cpp  debug_module_view.h  display_views.h  gps_view.cpp  gps_view.h  home_view.cpp  home_view.h  leds.cpp  leds.h  lora_view.cpp  lora_view.h  menu_view.cpp  menu_view.h  message_view.h  module_status_view.cpp  module_status_view.h  name_view.h  qr_code_view.cpp  qr_code_view.h  readings_view.cpp  readings_view.h  refresh_modules_worker.cpp  refresh_modules_worker.h  schedule_view.cpp  schedule_view.h  self_check_view.h
fk/hal/: battery_gauge.cpp  battery_gauge.h  board.cpp  board.h  buttons.cpp  buttons.h  clock.cpp  clock.h  display.cpp  display.h  flash.cpp  flash.h  gps.cpp  gps.h  hal.h  ipc.cpp  ipc.h  leds.cpp  leds.h  lora.cpp  lora.h  marker_lights.h  memory.cpp  memory.h  metal.cpp  metal.h  modmux.cpp  modmux.h  mutex.h  network.cpp  network.h  pins.h  random.cpp  random.h  releasable.cpp  sd_card.cpp  sd_card.h  watchdog.cpp  watchdog.h  wifi.cpp  (+1 more)
fk/httpd/: api_handler.cpp  api_handler.h  cpool.cpp  cpool.h  default_routes.h  download_handler.cpp  download_handler.h  httpd.cpp  httpd.h  module_handler.cpp  module_handler.h  pool.cpp  pool.h  receive_handler.cpp  receive_handler.h  req.cpp  req.h  routing.cpp  routing.h  server.cpp  server.h  utilities.cpp
fk/logos/: conservify_bw_logo-32.h  conservify_bw_logo-56.h  conservify_bw_logo-64.h  conservify_logo_bw-32.h  conservify_logo_bw-56.h  conservify_logo_bw-64.h  fk_bw-128x27.h  fk_bw-128x32.h  fk_logo_bw-100x21.h  fk_logo_bw-128x27.h  fk_logo_bw-128x32.h  fk_logo_bw-80x17.h
fk/lora/: lora.cpp  lora.h  rn2903.cpp  rn2903.h  sc16is740.cpp  sc16is740.h
fk/modules/: configure.cpp  configure.h  configure_module_worker.cpp  configure_module_worker.h  crc.c  crc.h  eeprom.cpp  eeprom.h  enable_module_power.cpp  enable_module_power.h  module_factory.cpp  module_factory.h  modules.c  modules.h  refresh_modules_worker.cpp  refresh_modules_worker.h  registry.cpp  registry.h  scan_modules_worker.cpp  scan_modules_worker.h  scanning.cpp  scanning.h  service_modules_worker.cpp  service_modules_worker.h  unknown.cpp  unknown.h
fk/networking/: api_handler.cpp  api_handler.h  connection.cpp  connection.h  cpool.cpp  cpool.h  debug_connection.cpp  debug_connection.h  debug_udp.cpp  debug_udp.h  default_routes.h  dns_message.cpp  dns_message.h  download_firmware_worker.cpp  download_firmware_worker.h  download_handler.cpp  download_handler.h  file_handler.cpp  file_handler.h  http_connection.cpp  http_connection.h  http_reply.cpp  http_reply.h  http_server_connection.cpp  http_server_connection.h  logs_handler.cpp  logs_handler.h  module_handler.cpp  module_handler.h  network_duration.cpp  network_duration.h  network_services.cpp  network_services.h  network_task.cpp  network_task.h  networking.h  receive_firmware_handler.cpp  receive_firmware_handler.h  receive_handler.cpp  receive_handler.h  (+13 more)
fk/state/: dynamic.cpp  dynamic.h  gps_state.h  lora_state.h  modules.cpp  modules.h  network_state.h  power_state.h  schedule_state.h  storage_state.h
fk/storage/: backup_worker.cpp  backup_worker.h  bad_blocks.cpp  bad_blocks.h  basic_page_cache.h  block_appender.cpp  block_appender.h  caching_memory.cpp  caching_memory.h  data_record.cpp  data_record.h  dhara.cpp  dhara.h  dhara_nand.h  dump_flash_memory_worker.cpp  dump_flash_memory_worker.h  file.cpp  file.h  file_map.cpp  file_map.h  file_ops.h  file_ops_darwin.cpp  file_ops_darwin.h  file_ops_lfs.cpp  file_ops_lfs.h  file_ops_phylum.cpp  file_ops_phylum.h  lfs_attributes.h  (+34 more)
src/: CMakeLists.txt  WiFi.cpp  WiFiClient.cpp  WiFiSSLClient.cpp  WiFiUdp.cpp  arduino.cpp  assert.cpp  blake2b.cpp  blake2b.h  cobs.h  crc32.cpp  data_chain.cpp  data_chain.h  delimited_buffer.cpp  delimited_buffer.h  dhara_map.cpp  directory.h  directory_chain.cpp  directory_chain.h  directory_tree.cpp  directory_tree.h  entries.h  file_appender.cpp  file_appender.h  file_ops.h  file_reader.cpp  file_reader.h  fk-app-protocol.h  fk-app.pb.c  fk-app.pb.h  fk-data-protocol.h  fk-data.pb.h  flash_devices.h  flash_memory.h  flat_attribute_storage.h  free_sectors_chain.cpp  gcc.s  hooks.c  hooks.h  integer_chain.cpp  (+45 more)
tests/: CMakeLists.txt  fake_data.cpp  geometry.h  main.cpp  phylum_tests.h  string_format.h  test_alloc.cpp  test_attrs.cpp  test_basics.cpp  test_buffers.cpp  test_dhara.cpp  test_free_sectors.cpp  test_large_files.cpp  test_layout_256.cpp  test_reads.cpp  test_super.cpp  test_tree.cpp  test_truncate.cpp  test_writes.cpp
(+442 files in other folders)
